<resources>
    <string name="app_name">Brooklyn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="brooklyn">BROOKLYN</string>
    <string name="time_table">Time table</string>
    <string name="gallery">Gallery</string>
    <string name="results">Results</string>
    <string name="e_learning">E-learning</string>
    <string name="events">Events</string>
    <string name="news_amp_notices"><![CDATA[News & Notices]]></string>
    <string name="todo">TODO</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_number">Registration number</string>
    <string name="semester">Semester</string>
    <string name="academic_year">Academic year</string>
    <string name="submit">Submit</string>
</resources>
